create github pages

--- a/Селикомарт.html
+++ b/Селикомарт.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Mobile friendly</a><a class="dropdown-item" href="https://mobirise.com/">Based on Bootstrap</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">Trendy blocks</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://mobirise.com/">Image/content slider</a><a class="dropdown-item" href="https://mobirise.com/">Contact forms</a><a class="dropdown-item" href="https://mobirise.com/">Image gallery</a><a class="dropdown-item" href="https://mobirise.com/">Mobile menu</a><a class="dropdown-item" href="https://mobirise.com/">Google maps</a><a class="dropdown-item" href="https://mobirise.com/">Social buttons</a><a class="dropdown-item" href="https://mobirise.com/">Google fonts</a><a class="dropdown-item" href="https://mobirise.com/">Video background</a></div></div><a class="dropdown-item" href="https://mobirise.com/">Host anywhere</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Mobile friendly</a><a class="dropdown-item" href="https://mobirise.com/">Based on Bootstrap</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">Trendy blocks</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://mobirise.com/">Image/content slider</a><a class="dropdown-item" href="https://mobirise.com/">Contact forms</a><a class="dropdown-item" href="https://mobirise.com/">Image gallery</a><a class="dropdown-item" href="https://mobirise.com/">Mobile menu</a><a class="dropdown-item" href="https://mobirise.com/">Google maps</a><a class="dropdown-item" href="https://mobirise.com/">Social buttons</a><a class="dropdown-item" href="https://mobirise.com/">Google fonts</a><a class="dropdown-item" href="https://mobirise.com/">Video background</a></div></div><a class="dropdown-item" href="https://mobirise.com/">Host anywhere</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,8 +60,36 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4" style="background-image: url(assets/images/f4641f4319fb4d557d5ab4a9bfe4aa16-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><div id="header1-4" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/f4641f4319fb4d557d5ab4a9bfe4aa16-2000x1333.jpg);">
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter45223206 = new Ya.Metrika({
+                    id:45223206,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true
+                });
+            } catch(e) { }
+        });
 
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript>&amp;amp;amp;lt;div&amp;amp;amp;gt;&amp;amp;amp;lt;img src="https://mc.yandex.ru/watch/45223206" style="position:absolute; left:-9999px;" alt="" /&amp;amp;amp;gt;&amp;amp;amp;lt;/div&amp;amp;amp;gt;</noscript>
+<!-- /Yandex.Metrika counter -->
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);"></div>
 
     <div class="mbr-table-cell">
@@ -70,8 +98,8 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">Формы для муссовых тортов из Италии</h1>
-                    <p class="mbr-section-lead lead">Не существует граней возможного! Создавай шедевры у себя на кухне!</p>
+                    <h1 class="mbr-section-title display-1 mbr-editable-content">Формы для муссовых тортов из Италии</h1>
+                    <p class="mbr-section-lead lead mbr-editable-content">Не существует граней возможного! Создавай шедевры у себя на кухне!</p>
                     
                 </div>
             </div>
@@ -80,7 +108,7 @@
 
     <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#header2-7"><i class="mbr-arrow-icon"></i></a></div>
 
-</section>
+</section></div>
 
 <section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-7" style="background-image: url(assets/images/13162550-1087992997933687-880745295-n-2000x2000.jpg);">
 
@@ -141,7 +169,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Хочешь получить уникальный рецепт потрясающего муссового торта? Тогда оставляй адрес электронной мочты и мы отправим его тебе!">
-                        <input type="hidden" value="cE6hPlESXxZgXTJ9/UE0CunuGL2qvmG3h5ZlymU7oOYdiTl3MjhZ/EBzRt6vmpeZgQIwuGCqR7mgn5MTlbG4KyV1bDPXmNfqbp6CQfuKvhtvRCk83CbJQuR3jfZjYpEf" data-form-email="true">
+                        <input type="hidden" value="2DtB7ZGE1fwM/XTqyovXWvWcd/Ujp0nkTQPiiWWra9glQd/XXtPjPh1n1PUKvP4cOE6nwF1wDMicltN5hsFOzETHHC+6icjYumPSX8SBVqu92wb+VCqF00+UXFnxq6tt" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Введите свой адрес электронной почты" id="form2-9-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">Хочу уникальный рецепт!</button></span>
@@ -300,7 +328,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="WpWwSVUGXxfbEpSF+97YuOVJYOwgeXGwjZI8vlN5lS/9KJ8dQZqriEO7SE0Jrxg4B0bGv05xu69zQm7tWK3i1B3H6a+m1wvvYXDZ7Li8KYguwM7fzltZsbRJ9Kz1LO8d" data-form-email="true">
+                        <input type="hidden" value="ycrPdBHXGX88idd4BPiBA8uiFBssobsITccCKHA+CP2AdLeFqVmPUADAhTrFjIBWuI2+GAEUN2zdLvd7YiNklynC4PV3KRcDU1kYdFlv17d/NXRSNL25jx33aLiegovo" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -385,7 +413,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ZFEy83vV4bgmGMil/76XweJZAh2m4lBGy1PzXnVJuAUfeZ2wL8QXATB9LGXyh39R0Gii8tRuvE0SdfhJFHDDgDc3lccjC7XAObwTQuBdMqIZzx0ob/HlGHk/muYyGyZn" data-form-email="true">
+                    <input type="hidden" value="ua+ccyRkzlL7knAuxlNHV3jFzG0Iw3VAsIRlRAQlZP9vC4J6gpEv8iCT+N0Bd5K1voHGsKep6h8vyNOrDy0PPNAOOPI/e5f6GW3ocVtKouyJKKLRg2QPl2e2F25hZKZL" data-form-email="true">
 
                     
 
