create github pages

--- a/page2.html
+++ b/page2.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Mobile friendly</a><a class="dropdown-item" href="https://mobirise.com/">Based on Bootstrap</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">Trendy blocks</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://mobirise.com/">Image/content slider</a><a class="dropdown-item" href="https://mobirise.com/">Contact forms</a><a class="dropdown-item" href="https://mobirise.com/">Image gallery</a><a class="dropdown-item" href="https://mobirise.com/">Mobile menu</a><a class="dropdown-item" href="https://mobirise.com/">Google maps</a><a class="dropdown-item" href="https://mobirise.com/">Social buttons</a><a class="dropdown-item" href="https://mobirise.com/">Google fonts</a><a class="dropdown-item" href="https://mobirise.com/">Video background</a></div></div><a class="dropdown-item" href="https://mobirise.com/">Host anywhere</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/">Контакты:</a></li><li class="nav-item"><a class="nav-link link" href="Селикомарт.html">+79826362250</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-t" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-t" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -75,7 +75,7 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-phone mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">+1 (0) 000 0000 001 or +1 (0) 000 0000 002</span>
+                            <span class="list-group-text">+7(982)636-22-50</span>
                         </li>
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-map-pin mbr-iconfont-company-contacts3"></span></span>
@@ -83,7 +83,7 @@
                         </li>
                         <li class="list-group-item active">
                             <span class="list-group-icon"><span class="etl-icon icon-envelope mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text"><a href="mailto:support@mobirise.com">support@mobirise.com</a></span>
+                            <span class="list-group-text">kirillvakolyuk@mail,ru</span>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +104,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="p38okUkmboShC8zbLouj2Z2KAYBdpvNnqBFUMcwUKA1+ERAEsCP5wUWnSTZyDwI13ThtDtUmUmx/Q7tPVv9GHwAwcZT8hqFkutt5uOPG7Tz++ltZBUzIld8rJVO8bgHc" data-form-email="true">
+                    <input type="hidden" value="rhyPzJSETMlwhXjbmwENprExB69AWoZ4L8bbe6u8WLuYKDnEvp8S/01wxCviBKNOnIJX+PJVLhI9qfe4ngEPDgtyPbgCi2+cMfSg3+JyKwqqBwScnUiYm6LuisXdkfYP" data-form-email="true">
 
                     
 
@@ -131,7 +131,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-s" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2017 SilikoForms.</p>
     </div>
 </footer>
 
