--- a/Селикомарт.html
+++ b/Селикомарт.html
@@ -28,8 +28,37 @@
   
 </head>
 <body>
-<section id="menu-0">
+<div id="menu-0" custom-code="true"><section>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter45223206 = new Ya.Metrika({
+                    id:45223206,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true,
+                    ecommerce:"dataLayer"
+                });
+            } catch(e) { }
+        });
 
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript>&amp;amp;amp;lt;div&amp;amp;amp;gt;&amp;amp;amp;lt;img src="https://mc.yandex.ru/watch/45223206" style="position:absolute; left:-9999px;" alt="" /&amp;amp;amp;gt;&amp;amp;amp;lt;/div&amp;amp;amp;gt;</noscript>
+<!-- /Yandex.Metrika counter -->
     <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
@@ -48,7 +77,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/">Контакты:</a></li><li class="nav-item"><a class="nav-link link" href="Селикомарт.html">+79826362250</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link mbr-editable-menu-item" href="https://mobirise.com/">Контакты:</a></li><li class="nav-item"><a class="nav-link link mbr-editable-menu-item" href="Селикомарт.html">+79826362250</a></li><li class="nav-item"><a class="nav-link link mbr-editable-menu-item" href="https://mobirise.com/"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,9 +88,9 @@
         </div>
     </nav>
 
-</section>
+</section><section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section></div>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><div id="header1-4" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/f4641f4319fb4d557d5ab4a9bfe4aa16-2000x1333.jpg);">
+<div id="header1-4" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/f4641f4319fb4d557d5ab4a9bfe4aa16-2000x1333.jpg);">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
@@ -170,7 +199,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Хочешь получить уникальный рецепт потрясающего муссового торта? Тогда оставляй адрес электронной мочты и мы отправим его тебе!">
-                        <input type="hidden" value="uuJhkGdOrZptLXuwcc0bIWUG0wRAZWM2auZTma5ywDo7IUv65Wr+4Kci6E9NciOn9UmepnLBR260qtMpGKHM7PmMvZeIJ7LOcBuDCxR3lH0kzdWAEcaCQwfVrXmtwQI0" data-form-email="true">
+                        <input type="hidden" value="1/a+TVW9DmgJ3Z9CWn5vpIRHHPoKZPO2r6+esgmJxzCwAoRJCvcAZeDbiaPFxiqfZDkqkShgycepjK9JkYSVGHH23HlYVpS7Os62f9V84Cmb3PCD1imHHisRRxA0Up4y" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Введите свой адрес электронной почты" id="form2-9-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">Хочу уникальный рецепт!</button></span>
@@ -379,7 +408,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Контактная форма">
 
-                        <input type="hidden" value="DmsSWLlZN+Xg0P2XSspa9+FQhZMlyIDR/TyWbQO83vUaKvvR+csPxF3H/BVrwTlk4HhftVVyBw+9vsRbBjn7TvsHCQrSZXhElvXktxpBAbTpdxHJ2doHI8p52EEUDCJ4" data-form-email="true">
+                        <input type="hidden" value="mHv2PRI2XoBi0wCBZa6hFmC5BOcrq2ELwDBW7BlZRDTLQpURpapxiluEWRqWcpst3iPJANzFNXP+eLQCCU0/MO65a0QBNx0XWZig1IRQFmGVvvpNXJNee9FyRF/0mYD+" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -464,7 +493,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="k3+oEGAyuNs3sjeZYi4HA6W2fhNc+Rj4fHF1JtiUNZ3Flz/ChF0H7/sw/NqlD7QfWAtwN12P5Wi2/iHC0VQPj+e1TETQE/OwntLZ8hihRjrUSzKkzi2kZjbBF4n2aMLR" data-form-email="true">
+                    <input type="hidden" value="ePtHQgkkbNnB35VCi9Y20YfIq7IJYdoAOCKA96IqR/E1I9RupRZ6ChPx09yGoljnkUFQ6MLz3BJ4wpLsm3lo6ulIaiv6wUU3EdyN1bu1t9h6tJstqRUiJpigbRS4F+gH" data-form-email="true">
 
                     
 
