create github pages

--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-t" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-t" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -104,7 +104,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FRQGUqx5VsapxLzXHaPsaVlN6Uq+0WHEFUpb1lWLSDg2Z0ZXgjVaJKjz6CdWNtSkSqgEk4sV2BpHgRkJp8aWXcEbR1tauVFWeXhWzn8aTTbAxeeXvcO0ri40TEAwBuUr" data-form-email="true">
+                    <input type="hidden" value="GxKqXA3rK57apntsu0sBqvHJ47Cti3UpuidvRkCC6/dyyC8Fyki9vG6gSxk59wneBs7F0FPBj+fE70HTmEgfsw1KoJsBrCQtgG04h77cvf+FD3qZzrY7WQkSGGuRluvp" data-form-email="true">
 
                     
 
