--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo.png" alt="Mobirise"></a>
-                        <a class="navbar-caption text-warning" href="https://mobirise.com">SilikoForms</a>
+                        <a class="navbar-caption text-warning" href="Селикомарт.html">SilikoForms</a>
                     </div>
 
                 </div>
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/">Контакты:</a></li><li class="nav-item"><a class="nav-link link" href="Селикомарт.html">+79826362250</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/">Контакты:</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Селикомарт.html">+79826362250</a></li><li class="nav-item"><a class="nav-link link" href="Селикомарт.html">kirillvakolyuk@mail.ru</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -191,6 +191,7 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
   <input name="animation" type="hidden">
